# pygame-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: app.py  config.py  main.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/screens/: menu_screen.py  screen.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/ui/: ui.py  ui_item.py  utils.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/ui/items/: button.py  label.py  label_with_background.py  text_input.py
