[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.1"

[tool.poetry.scripts]
game = "{{ cookiecutter.project_slug }}.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
